kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: show-and-tell
  labels:
    app.kubernetes.io/name: show-and-tell
    app.kubernetes.io/part-of: show-and-tell
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: showntell.34-147-139-99.sslip.io
      http:
        paths:
          - backend:
              service:
                name: show-and-tell
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - showntell.34-147-139-99.sslip.io
      secretName: show-and-tell-ingress-tls
